@@ -9,6 +9,7 @@ Changes in Release 2.2.4
 [JOST-79] - StatusDetail builder is missing from saml2-protocol-config.properties file
 [JOST-83] - Add object provider support for Condition for Delegation Restriction extension schema
 [JOST-85] - metadata missing entityId causes NullPointerException
+[JOST-86] - In absense of matching endpoint, IDP choose the first ACS in metadata.
 * Add object provider support for SAML 2 ECP schema
 
 Changes in Release 2.2.3
